2007-03-08  Janis Johnson  <janis187@us.ibm.com>

	* doc/extend.texi (Other Builtins): Add decimal float variants
	of signbit.
	* builtins.def: Ditto.
	* builtins.c (expand_builtin): Ditto.

	* configure.ac: Move rel16 check to match order in mainline; fix
	dadd instruction.
	* configure: Regenerate.

2007-03-07  Janis Johnson  <janis187@us.ibm.com>

	* config/dfp-bit.h: Don't include <fenv.h>, "tconfig.h"; include
	"coretypes.h" and "tm.h" only if IN_LIBGCC2 is defined.

	* Makefile.in (D32PBIT_FUNCS, D64PBIT_FUNCS, D128PBIT_FUNCS):
	Replace _addsub_* with _add_*, _sub_*.
	* config/dfp-bit.h: Replace L_addsub_* with L_add_*, L_sub_*;
	process DFP_ADD and DFP_SUB separately.
	* config/dfp-bit.c: Ditto.

2007-02-22  Janis Johnson  <janis187@us.ibm.com>

	* version.c (bug_report_url): Use release-generic page.

2007-02-20  Janis Johnson  <janis187@us.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimplify_va_arg): Simplify code to
	adjust register number for _Decimal128.

	* doc/invoke.texi (RS/6000 and PowerPC Options): Add -mcmpb and -mdfp.
	* configure.ac (HAVE_GAS_CMPB): Check for assembler support of the
	cmpb instruction.
	(HAVE_GAS_DFP): Check for assembler support of decimal floating
	point instructions.
	* configure: Regenerate.
	* config.in: Regenerate.
	* config/rs6000/rs6000.opt (mcmpb, mdfp): New.
	* config/rs6000/rs6000.c (rs6000_override_options): Add CMPB and DFP
	masks to power6 and power6x and to POWERPC_MASKS.
	* config/rs6000/rs6000-c.c (rs6000_cpu_cpp_builtins): Define
	_ARCH_PWR6.
	* config/rs6000/rs6000.h: Check assembler support for CMPB and DFP.

2007-02-16  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline.
	* config/rs6000/rs6000.opt (no-fp-in-toc): Use Var not Mask.
	(no-sum-in-toc): Ditto.
	* config/rs6000/rs6000.c (rs6000_handle_option): Use new
	variables.
	* config/rs6000/sysv4.h (SUBTARGET_OVERRIDE_OPTIONS): Set
	NO_FP_IN_TOC for -fPIC instead of mask.

2007-02-07  Peter Bergner  <bergner@vnet.ibm.com>
